--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -630,20 +630,23 @@ bg:
       our action: "Получихме съобщението и вече работим по него"
   shared:
     menu_settings:
-      title: "Вашите настройки"
+      title: "Настройки за четене"
       close: "Затвори"
       font: "Шрифт:"
       font1: "Helvetica"
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "Размер:"
+      font size: "Размер на шрифта:"
       small: "Малък"
       medium: "Среден"
       large: "Голям"
-      highlights: "Маркирани:"
+      highlights: "Маркирани"
       'on': "Включи"
       'off': "Изключи"
+      extras: "Още:"
+      translation notes: "Бележки"
+      cross references: "Препратки"
   app errors:
     404 explanation: "Започни тук: <a href='%{reader_path}'>НАЧАЛО</a>. Свържи се с нашия Contact our <a href='%{support_url}'>екип</a>."
     404 message: "Страницата не съществува."
@@ -656,7 +659,6 @@ bg:
     index title: "Възможни версии"
     publisher widget title: "Издател"
     visit publisher: "Посвети уебстраницата на издателя"
-    about: "Още за тази версия..."
     read title: "Чети тази версия"
     other versions: "Други версии от този издател"
     number of versions field: "Общо врсии:"
