--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -94,6 +94,7 @@ cs:
   search placeholder: "Vyhledat..."
   search: "Hledat"
   book: "Kniha"
+  filter book: "Filtrovat knihy..."
   try the beta: "Vyzkoušejte Beta verzi"
   welcome to the beta: "Vítejte na novém YouVersion.com!"
   selected: "Zvolené"
@@ -538,7 +539,7 @@ cs:
     card exp date: "Datum expirace (MMRR)"
     receipt: "Zaslat e-mailem kopii mého dokladu."
     preview: "Náhled daru"
-    header copy: "Společně se můžeme stát generací nejvíce zapálenou pro Bibli v historii. Vaše podpora znamená, že si lidé mohou otevřít Boží Slovo na více platformách, ve více jazycích, ve více překladech a ve více zemích než kdy předtím. Prosím vyplňte formulář níže pro odeslání vašeho daru. Informace o platbě zobrazíme na další stránce. Přijímáme platby kartami Visa nebo Mastercard."
+    header copy: "Společně se můžeme stát nejvíce zapálenou generací pro Bibli v historii. Vaše podpora znamená, že si lidé mohou otevřít Boží Slovo na více platformách, ve více jazycích, ve více překladech a ve více zemích než kdy předtím. Prosím vyplňte formulář níže pro odeslání vašeho peněžního daru. Informace o platbě zobrazíme na další stránce. Informace o způsobu platby naleznete na další obrazovce."
     header confirm copy: "Společně se můžeme stát generací nejvíce zapálenou pro Bibli v historii. Vaše podpora znamená, že lidé si můžou otevřít Boží Slovo na více platformách, ve více jazycích, ve více překladech a ve více zemích než kdy předtím. Klikněte na \"Darovat nyní\" pro odeslání daru."
     donate now button: "Darovat nyní"
     email header: "YouVersion, služba církve LifeChurch.tv, obdržela váš dar. Žádné zboží nebo služby nebyly poskytnuty výměnou za dar, kromě nehmatatelných náboženských výhod. Prosím kontaktujte giving@lifechurch.tv, pokud máte otázky."
@@ -630,20 +631,23 @@ cs:
       our action: "Byli jsme o tomto problému upozorněni a vrhneme se na něj co nejdřív, jak jen to bude možné."
   shared:
     menu_settings:
-      title: "Vaše nastavení"
+      title: "Nastavení zobrazení"
       close: "Zavřít"
       font: "Font:"
       font1: "Helvetica"
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "Velikost:"
+      font size: "Velikost písma:"
       small: "Malé"
       medium: "Střední"
       large: "Velké"
-      highlights: "Zvýraznění:"
+      highlights: "Zvýraznění"
       'on': "On"
       'off': "Off"
+      extras: "Extra:"
+      translation notes: "Poznámky pod čarou"
+      cross references: "Křížové odkazy"
   app errors:
     404 explanation: "Možná zkuste začít znovu na <a href='%{reader_path}'>úvodní stránce</a>. Stále máte potíže? Kontaktujte náš <a href='%{support_url}'>tým podpory</a>."
     404 message: "Je nám to líto, ale stránka, kterou hledáte nemohla být nalezena."
@@ -651,12 +655,12 @@ cs:
     408 explanation: "Obdrželi jsme chybové hlášení a každý přetrvávající problém budeme co nejrychleji řešit. Pojďme se podívat jestli vás budeme schopni vrátit zpět ke čtení Bible!"
     try again: "Zkuste to znovu"
   versions:
+    filter: "Filtrovat překlady..."
     courtesy of: "%{abbreviation} Vám přináší %{publisher}"
     learn more: "Zjistit více"
     index title: "Dostupné překlady"
     publisher widget title: "Vydavatel"
     visit publisher: "Přejít na stránky vydavatele"
-    about: "Více informací o tomto překladu..."
     read title: "Číst tento překlad"
     other versions: "Další překlady tohoto vydavatele"
     number of versions field: "Celkem překladů:"
