--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -156,10 +156,11 @@ de:
     see my likes: "Sieh alles, was ich mag"
     successfully deleted: "Notiz entfernt"
   ref:
+    loading secondary: "Schriftstelle wird in der 2. Bibelversion geladen..."
     clear verses: "Hervorhebung der Verse aufheben"
     choose book and chapter: "Buch + Kapitel auswählen"
     choose version: "Version auswählen"
-    choose second version: "Wähle eine zweite Version"
+    choose second version: "Wähle eine 2. Bibelversion."
     share: "Teilen"
     share now: "Jetzt teilen"
     selected: "Ausgewählt"
@@ -171,7 +172,7 @@ de:
     settings: "Einstellungen in der Leseansicht"
     invalid chapter title: "Über diese Version"
     invalid chapter text: "Dieses Kapitel gibt es nicht in dieser Version."
-    invalid secondary chapter text: "Dieses Kapitel existiert in deiner gewählten zweiten Version nicht."
+    invalid secondary chapter text: "Dieses Kapitel existiert in der 2. Version, die du gewählt hast, nicht."
     no secondary version title: "Über die Option \"Paralleles Lesen\" "
     no secondary version text: "Für %{language_name} ist nur eine Version verfügbar, so dass wir keine zweite Version für dich auswählen konnten. Bitte wähle selbst eine andere Version für das parallele Lesen aus."
     select another chapter: "Wähle ein anderes Kapitel"
@@ -537,7 +538,7 @@ de:
     card exp date: "Gültig bis (Monat/Jahr)"
     receipt: "Bitte um Kopie meiner Bestätigung als E-Mail."
     preview: "Vorschau mit Details der Spende"
-    header copy: "Gemeinsam könnten wir die Generation werden, die sich mehr mit der Bibel beschäftigt als alle anderen je zuvor. Deine Spende bedeutet, dass Menschen das Wort Gottes auf mehr Plattformen, in mehr Sprachen und Versionen und in mehr Ländern als je zuvor lesen können. Fülle das Formular aus, um zu spenden. Um die Infos für die Zahlung bitten wir auf den nächsten Seite. Wir akzeptieren Visa- Und Masterkarte."
+    header copy: "Gemeinsam könnten wir die Generation werden, die sich mehr mit der Bibel beschäftigt als alle anderen je zuvor. Deine Spende bedeutet, dass Menschen das Wort Gottes auf mehr Plattformen, in mehr Sprachen und Versionen und in mehr Ländern als je zuvor lesen können. Fülle das Formular aus, um zu spenden. Um die Infos für die Zahlung bitten dich wir auf den nächsten Seite."
     header confirm copy: "Gemeinsam könnten wir die Generation werden, die sich mehr mit der Bibel beschäftigt als alle anderen je zuvor. Deine Spende bedeutet, dass Menschen das Wort Gottes auf mehr Plattformen, in mehr Sprachen und Versionen und in mehr Ländern als je zuvor lesen können. Klicke auf \"Jetzt spenden\", um deine Spende zu senden.  "
     donate now button: "Jetzt spenden"
     email header: "YouVersion, ein Dienst von LifeChurch.tv, hat deine Spende erhalten. Als Gegenleistung für diese Spende wurden, abgesehen vom immateriellen, religiösen Nutzen, keine Waren oder Dienstleistungen ausgetauscht. Bei Fragen kannst du dich an giving@lifechurch.tv wenden."
@@ -629,7 +630,7 @@ de:
       our action: "Wir wurden hierüber informiert und werden uns so bald wie möglich darum kümmern."
   shared:
     menu_settings:
-      title: "Deine Einstellungen"
+      title: "Einstellungen der Leseansicht"
       close: "Schließen"
       font: "Schriftart:"
       font1: "Helvetica"
@@ -640,9 +641,12 @@ de:
       small: "Klein"
       medium: "Mittel"
       large: "Groß"
-      highlights: "Hervorhebungen:"
+      highlights: "Hervorhebungen"
       'on': "An"
       'off': "Aus"
+      extras: "Extras:"
+      translation notes: "Fussnoten"
+      cross references: "Querverweise"
   app errors:
     404 explanation: "Du kannst es noch einmal von <a href='%{reader_path}'>home page</a> aus versuchen. Gibt es da immer noch Probleme? Kontaktiere unser <a href='%{support_url}'>Support-Team</a>."
     404 message: "Leider kann die Seite, die du suchst, nicht gefunden werden."
@@ -650,6 +654,7 @@ de:
     408 explanation: "Wir wurden benachrichtigt und werden alle bestehenden Probleme so schnell wie möglich lösen. Lass uns probieren, deine Bibel wieder zugänglich zu machen. "
     try again: "Versuche es noch einmal"
   versions:
+    courtesy of: "%{abbreviation} von %{publisher}"
     learn more: "Mehr erfahren"
     index title: "Zur Verfügung stehende Versionen"
     publisher widget title: "Herausgeber"
