--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -13,7 +13,7 @@ id:
   donation error: "Kami mohon maaf, terjadi kesalahan dalam proses donasi Anda. Kesalahannya adalah: %{error_text}"
   created ago: "Dibuat %{time_ago} yang lalu"
   copy: "Salin"
-  copy confirmed: "Telah disalin!"
+  copy confirmed: "Tersalin!"
   new note: "Buat Catatan"
   twitter: "Twitter"
   facebook: "Facebook"
@@ -58,7 +58,7 @@ id:
   my notifications: "Atur Notifikasi"
   my connections: "Akun terkait"
   my devices: "Perangkat terkait"
-  language name: "Bahasa Indonesia"
+  language name: "Bahasa Inggris"
   sign up: "Daftar"
   have an account: "Sudah memiliki Akun?"
   no account: "Tidak memiliki Akun?"
@@ -84,7 +84,7 @@ id:
   privacy policy: "Kebijakan Privasi"
   terms: "Persyaratan"
   press: "Pers / Media"
-  get support: "Bantuan"
+  get support: "Dukungan"
   donate title: "Sumbang"
   choose language field: "Pilih bahasa Anda:"
   settings: "Pengaturan"
@@ -94,6 +94,7 @@ id:
   search placeholder: "Cari..."
   search: "Cari"
   book: "Kitab"
+  filter book: "Saring Kitab"
   try the beta: "Coba versi Beta"
   welcome to the beta: "Selamat datang di versi YouVersion.com yang baru!"
   selected: "Dipilih"
@@ -139,7 +140,7 @@ id:
     content field: "Isi:"
     save: "Simpan"
     select from list: "--Pilih--"
-    edit note: "Ubah Catatan"
+    edit note: "Sunting Catatan"
     all notes: "Semua Catatan"
     community notes: "Catatan Komunitas"
     new note: "Catatan Baru"
@@ -156,7 +157,7 @@ id:
     see my likes: "Lihat Semua Kesukaan Saya"
     successfully deleted: "Catatan dihapus"
   ref:
-    loading secondary: "Memuat refrensi dalam versi lainnya..."
+    loading secondary: "Memuat Refrensi dalam Versi Kedua..."
     clear verses: "Batalkan Pilihan Ayat"
     choose book and chapter: "Pilih Kitab + Pasal"
     choose version: "Pilih Versi"
@@ -179,7 +180,7 @@ id:
     view in reader: "Lihat %{reference} di Pembaca"
   users:
     unverified heading: "Hampir Selesai!"
-    unverified message: "Tampaknya anda mencoba untuk masuk dengan menggunakan akun yang belum diatur seluruhnya. Anda hanya memerlukan satu langkah saja: cukup dengan mengklik link verifikasi yang terdapat dalam e-mail konfirmasi yang anda terima dari YouVersion. Tidak dapat menemukannya? Cek kotak spam anda atau <a href='%{resend_path}'>kirim ulang e-mail konfirmasi</a>."
+    unverified message: "Tampaknya anda mencoba untuk masuk dengan menggunakan akun yang belum sepenuhnya siap. Anda hanya perlu satu langkah lagi: cukup dengan mengklik tautan verifikasi yang terdapat dalam e-mail konfirmasi yang anda terima dari YouVersion. Tidak dapat menemukannya? Cek kotak spam anda atau <a href='%{resend_path}'>kirim ulang e-mail konfirmasi</a>."
     reset connection: "Maaf, terjadi sebuah kesalahan. Silakan tutup dan kemudian hubungkan kembali sambungan ini."
     settings: "Pengaturan"
     no connection friends: "Tidak ada teman %{connection} anda yang menggunakan YouVersion."
@@ -221,9 +222,9 @@ id:
     edit account_existence: "Hapus Akun"
     delete account button: "Hapus Akun YouVersion Saya"
     no devices: "Tidak ada perangkat yang terhubung ke akun YouVersion anda"
-    no devices download copy: "Menurut Alkitab online, YouVersion.com, Aplikasi Alkitab adalah Alkitab seluler gratis yang bisa dipasang hampir di semua perangkat seluler. Aplikasi Alkitab memungkinkan pengguna membaca Alkitab, berbagi ayat dengan jejaring sosial mereka, menandai bacaan kesukaan mereka, dan banyak lagi&amp;mdash;semua dalam format yang mengikuti gaya hidup dinamis mereka. Kunjungi <a href='http://www.youversion.com/download'>youversion.com/download</a> dari perangkat selular anda untuk mengunduh Ap Alkitab dan hubungkan akun andaI"
+    no devices download copy: "Menurut Alkitab online, YouVersion.com, Aplikasi Alkitab adalah Alkitab seluler gratis yang bisa dipasang hampir di semua perangkat seluler. Aplikasi Alkitab memungkinkan pengguna membaca Alkitab, berbagi ayat dengan jejaring sosial mereka, menandai bacaan kesukaan mereka, dan banyak lagi&mdash;semua dalam format yang mengikuti gaya hidup dinamis mereka. Kunjungi <a href='http://www.youversion.com/download'>youversion.com/download</a> dari perangkat selular anda untuk mengunduh Ap Alkitab dan hubungkan akun anda!"
     yes delete: "Ya, Hapus Akun Saya"
-    account delete success: "Akun YouVersion anda telah sukses dihapus. Kami harap anda melanjutkan menemukan cara bermakna dalam berinteraksi dengan Alkitab. Beberapa aplikasi ini mungkin membantu anda bergerak maju: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    account delete success: "Akun YouVersion anda telah sukses dihapus. Kami harap anda melanjutkan menemukan cara berarti untuk berinteraksi dengan Alkitab. Beberapa aplikasi ini mungkin membantu saat anda melangkah maju: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Jika anda menghapus akun anda, selamanya anda akan kehilangan semua informasi, sejarah, dan personalisasi (seperti catatan, penanda, sorotan, dll.) anda di YouVersion.com dan Aplikasi Alkitab. Tindakan ini tidak dapat dibatalkan baik oleh anda maupun tim kami. Jika anda yakin, silakan lanjut di bawah ini."
     user recent activity: "Aktivitas Terkini %{user}"
     user notes: "Catatan-Catatan %{user}"
@@ -459,7 +460,7 @@ id:
     restart: "Mulai lagi Rencana"
     privacy description: "Itu pilihan anda. Anda ingin orang lain melihat anda sedang membaca rencana ini?"
     make private: "Buat Pribadi"
-    make public: "Buat publik"
+    make public: "Buat umum"
     privacy title: "Privasi"
     stop reading: "Hentikan Rencana ini"
     accountability: "Pertanggungjawaban"
@@ -538,8 +539,8 @@ id:
     card exp date: "Tanggal berakhir (MMYY)"
     receipt: "Kirim salinan tanda terima saya lewat email."
     preview: "Pratinjau Donasi"
-    header copy: "Bersama, kita dapat menjadi generasi paling Alkitabiah sepanjang sejarah. Dukungan anda berarti banyak orang bisa membuka Firman Tuhan melalui lebih banyak perangkat, dalam lebih banyak bahasa, versi, dan di banyak negara melebihi yang sebelumnya. Silakan isi formulir di bawah untuk memberikan donasi anda. Kami akan menghimpun info pembayaran di halaman selanjutnya. Kami menerima Visa atau Mastercard."
-    header confirm copy: "Bersama, kita dapat menjadi generasi paling Alkitabiah sepanjang sejarah. Dukungan anda berarti banyak orang bisa membuka Firman Tuhan melalui lebih banyak perangkat, dalam lebih banyak bahasa, versi, dan di banyak negara melebihi yang sebelumnya. Klik Sumbang Sekarang untuk memberikan donasi."
+    header copy: "Bersama, kita dapat menjadi generasi paling Alkitabiah sepanjang sejarah. Dukungan anda berarti orang bisa membuka Firman Tuhan melalui lebih banyak perangkat, dalam lebih banyak bahasa, lebih banyak versi, dan di banyak negara melebihi yang sebelumnya. Silakan isi formulir di bawah untuk memberikan donasi anda. Kami akan menghimpun info pembayaran di halaman selanjutnya."
+    header confirm copy: "Bersama, kita dapat menjadi generasi paling Alkitabiah sepanjang sejarah. Dukungan anda berarti orang bisa membuka Firman Tuhan di lebih banyak perangkat, dalam lebih banyak bahasa, lebih banyak versi, dan di banyak negara melebihi yang sebelumnya. Klik Sumbang Sekarang untuk memberikan donasi."
     donate now button: "Sumbang Sekarang"
     email header: "YouVersion, pelayanan dari LifeChurch.tv, telah menerima sumbangan anda. Tidak ada barang atau jasa yang disediakan sebagai ganti sumbangan, selain keuntungan agamawi. Silakan hubungi giving@lifechurch.tv untuk pertanyaan."
     email footer: "Donasi anda akan membantu orang-orang di seluruh dunia jatuh cinta pada Firman Tuhan."
@@ -564,8 +565,8 @@ id:
     partners title: "Para Mitra Penerbit Alkitab"
     partners text: "Tanpa mitra-mitra penerbit Alkitab kami yang dermawan, YouVersion takkan mampu menyediakan begitu banyak Alkitab bagi komunitas dunia. Banyak dari Anda bertanya bagaimana Anda dapat berterima kasih kepada para pendukung penting misi YouVersion ini. Anda dapat belajar lebih banyak tentang mereka, pelayanan mereka, dan berbagai cara mendukung mereka melalui tautan di bawah ini."
     translation title: "Para Tim Penerjemah Kami"
-    learn more: "Ketahui Lebih Lanjut"
-    bible dot com title: "Apa yang terjadi dengan Bible.com yang lama"
+    learn more: "Pelajari Lebih Lanjut"
+    bible dot com title: "Apa yang terjadi dengan Bible.com yang lama?"
     bible dot com copy: "Jika anda mencari pesan Christ Unlimited Ministries dari Bud dan Betty Miller atau situs lama Bible.com, silakan kunjungi situs baru mereka di <a href='http://www.bibleresources.org'>BibleResources.org</a>"
   press page:
     title: "Area Pers / Media"
@@ -626,37 +627,40 @@ id:
   pages:
     generic_error:
       title: "Duh!"
-      explanation: "Ada yang salah dibalik layar! Anda dapat mencoba lagi dengan menampilkan kembali halaman, kami mohon maaf atas ketidaknyamanan ini!"
+      explanation: "Ada yang salah dibalik layar! Anda dapat mencoba lagi dengan memuat ulang halaman, kami mohon maaf untuk ketidak nyamanan ini!"
       our action: "Kami telah dilapori tentang ini dan akan membereskan secepatnya."
   shared:
     menu_settings:
-      title: "Pengaturan Anda"
+      title: "Pengaturan Pembaca"
       close: "Tutup"
       font: "Huruf:"
       font1: "Helvetica"
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "Ukuran:"
+      font size: "Ukuran Huruf:"
       small: "Kecil"
       medium: "Sedang"
       large: "Besar"
-      highlights: "Sorotan:"
+      highlights: "Sorotan"
       'on': "Hidup"
       'off': "Mati"
+      extras: "Tambahan:"
+      translation notes: "Catatan kaki"
+      cross references: "Referensi silang"
   app errors:
     404 explanation: "Anda dapat mencoba memulai lagi dari <a href='%{reader_path}'>halaman beranda</a>. Masih bermasalah? Hubungi <a href='%{support_url}'>tim dukungan</a> kami."
     404 message: "Mohon maaf, halaman yang anda cari tidak dapat ditemukan."
-    408 message: "Maaf, server kami tidak memberikan respon."
+    408 message: "Maaf, tapi server kami tidak memberikan respon tepat waktu."
     408 explanation: "Kami sudah diingatkan dan akan secepatnya mengatasi segala permasalahan yang ada. Ayo kita lihat apakah kita dapat kembali ke bacaan Alkitab anda!"
     try again: "Coba lagi"
   versions:
+    filter: "Saring Versi"
     courtesy of: "%{abbreviation} dipersembahkan oleh %{publisher}"
-    learn more: "Ketahui Lebih Lanjut"
+    learn more: "Pelajari Lebih Lanjut"
     index title: "Versi tersedia"
     publisher widget title: "Penerbit"
     visit publisher: "Kunjungi Situs Web Penerbit"
-    about: "Kenali versi ini lebih lanjut..."
     read title: "Baca Versi Ini"
     other versions: "Versi lain dari penerbit ini"
     number of versions field: "Jumlah versi: "
