--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -538,7 +538,7 @@ ja:
     card exp date: "有効期限（月／年）"
     receipt: "領収書のコピーを自分宛に送る"
     preview: "次の画面へ進む"
-    header copy: "今までになく聖書に熱心な世代を共に創造することができます。皆様からの寄付によって、今まで以上に多くのシステム上での利用、さらに多くの言語や聖書訳の利用を可能にし、もっと多くの国々の人が神様の御言葉に触れることができるようになります。。寄付をするには、以下のフォームの空欄にご記入お願いします。支払い方法は次の画面で入力いただきます。VisaカードとMasterカードがご利用いただけます。"
+    header copy: "今までになく聖書に熱心な世代を共に創造することができます。皆様からの寄付によって、今まで以上に多くのシステム上での利用、さらに多くの言語や聖書訳の利用を可能にし、もっと多くの国々の人が神様の御言葉に触れることができるようになります。。寄付をするには、以下のフォームの空欄にご記入お願いします。支払い方法は次の画面で入力いただきます。"
     header confirm copy: "今までになく聖書に熱心な世代を共に創造することができます。皆様からの寄付によって、今まで以上に多くのシステム上での利用、さらに多くの言語や聖書訳の利用を可能にし、もっと多くの国々の人が神様の御言葉に触れることができるようになります。「寄付する」をクリックして寄付をお願いします。"
     donate now button: "寄付する"
     email header: "YouVersion（LifeChurch.tv）への寄付をありがとうございました。寄付と引き換えに、無形資産である宗教的信仰以外の商品やサービスの提供は行われませんでした。ご質問はgiving@lifechurch.tv までお願いします。"
@@ -630,20 +630,23 @@ ja:
       our action: "こちらでも既知のエラーですので、早急に対応します。"
   shared:
     menu_settings:
-      title: "あなたの設定"
+      title: "聖書リーダーの設定"
       close: "閉じる"
       font: "フォント："
       font1: "Helvetica"
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "サイズ："
+      font size: "フォントサイズ："
       small: "小"
       medium: "中"
       large: "大"
-      highlights: "ハイライト："
+      highlights: "ハイライト"
       'on': "オン"
       'off': "オフ"
+      extras: "追加："
+      translation notes: "脚注"
+      cross references: "相互参照"
   app errors:
     404 explanation: "<a href='%{reader_path}'>ホームページ</a>へ戻ってみてください。\n問題が継続する場合は、<a href='%{support_url}'>support team</a>までご連絡ください。"
     404 message: "申し訳ありませんが、お探しのページは見つかりません。"
@@ -656,7 +659,6 @@ ja:
     index title: "ご利用いただける聖書訳"
     publisher widget title: "出版元"
     visit publisher: "出版元のウェブサイトにアクセスする"
-    about: "この聖書訳の詳細を知るには・・・"
     read title: "この聖書訳を読む"
     other versions: "この出版元から出ているその他の聖書訳"
     number of versions field: "聖書訳の数:"
