--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -156,6 +156,7 @@ nl:
     see my likes: "Zie al mijn Leuk gevonden"
     successfully deleted: "Notitie verwijderd"
   ref:
+    loading secondary: "Referenties in Secundaire Versie aan het laden..."
     clear verses: "Wis geselecteerde verzen"
     choose book and chapter: "Kies Boek + Hoofdstuk"
     choose version: "Kies Versie"
@@ -537,7 +538,7 @@ nl:
     card exp date: "Expiratie datum (MMJJ)"
     receipt: "E-mail me een kopie van mijn bon"
     preview: "Bekijk Gift"
-    header copy: "Samen kunnen we de meest betrokken Bijbel generatie uit de geschiedenis worden. Uw steun betekent dat mensen Gods Woord op meer platformen, talen, versies en in meer landen kunnen openen dan ooit te voren. Vul het formulier hieronder in om je donatie te doen. Op de volgende pagina zullen we u om uw betaalgegevens vragen. We aanvaarden Visa of Mastercard"
+    header copy: "Samen kunnen we de meest betrokken Bijbel generatie uit de geschiedenis worden. Uw steun betekent dat mensen Gods Woord op meer platformen, talen, versies en in meer landen kunnen openen dan ooit te voren. Vul het formulier hieronder in om je donatie te doen. Op de volgende pagina zullen we u om uw betaalgegevens vragen."
     header confirm copy: "Samen kunnen we de meest betrokken Bijbel generatie uit de geschiedenis worden. Uw steun betekent dat mensen Gods Woord op meer platformen, talen, versies en in meer landen dan ooit tevoren kunnen openen. Klik, Doneer nu om uw donatie te doen."
     donate now button: "Doneer Nu"
     email header: "YouVersion, een onderdeel van LifeChurch.tv, heeft uw donatie ontvangen. Er zijn geen goederen of diensten verstrekt in ruil voor de donatie, behalve immateriële religieuze voordelen. Neem contact op met giving@lifechurch.tv als u verder nog vragen heeft."
@@ -629,20 +630,23 @@ nl:
       our action: "We zijn er van op de hoogte gesteld en we gaan er zo snel mogelijk mee aan de gang."
   shared:
     menu_settings:
-      title: "Je instellingen"
+      title: "Lezer Instellingen"
       close: "Sluit"
       font: "Lettertype:"
       font1: "Helvetica"
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "Grootte:"
+      font size: "Lettertype Grootte:"
       small: "Klein"
       medium: "Middel"
       large: "Groot"
-      highlights: "Benadrukking:"
+      highlights: "Benadrukking"
       'on': "Aan"
       'off': "Af"
+      extras: "Extra's:"
+      translation notes: "Voetnoten"
+      cross references: "Kruis referenties"
   app errors:
     404 explanation: "Je kan opnieuw starten vanaf de <a href='%{reader_path}'>beginpagina</a>. Ervaar je nog steeds problemen? Neem contact op met onze <a href='%{support_url}'>ondersteuningsteam</a>."
     404 message: "Sorry, de pagina die je zoekt kan niet worden gevonden."
@@ -650,6 +654,7 @@ nl:
     408 explanation: "We zijn op de hoogte van het probleem en zullen het zo snel mogelijk verhelpen. Laten we kijken als we je weer de Bijbel kunnen laten lezen!"
     try again: "opnieuw proberen"
   versions:
+    courtesy of: "%{abbreviation} aan jou gebracht door %{publisher}"
     learn more: "Leer Meer"
     index title: "Beschikbare Versies"
     publisher widget title: "Uitgever"
