--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -58,7 +58,7 @@ pt-BR:
   my notifications: "Gerenciar Notificações"
   my connections: "Contas Conectadas"
   my devices: "Dispositivos Conectados"
-  language name: "Português"
+  language name: "Português (Brasil)"
   sign up: "Cadastre-se"
   have an account: "Já Tem uma Conta?"
   no account: "Não Tem uma Conta?"
@@ -94,6 +94,7 @@ pt-BR:
   search placeholder: "Procurar..."
   search: "Procurar"
   book: "Livro"
+  filter book: "Filtrar Livros..."
   try the beta: "Experimente a versão Beta"
   welcome to the beta: "Bem vindo ao novo YouVersion.com!"
   selected: "Selecionado\n"
@@ -156,6 +157,7 @@ pt-BR:
     see my likes: "Ver Tudo que Curti"
     successfully deleted: "Anotação removida"
   ref:
+    loading secondary: "Carregando Referência em Versão Secundária..."
     clear verses: "Apagar Versículos Selecionados"
     choose book and chapter: "Escolher Livro + Capítulo"
     choose version: "Escolher Versão"
@@ -537,7 +539,7 @@ pt-BR:
     card exp date: "Data de expiração (MMAA)"
     receipt: "Me envie cópia do recibo."
     preview: "Visualização da doação"
-    header copy: "Juntos podemos nos tornar a geração mais comprometida na história. Seu apoio significa abertura da Palavra de Deus em mais plataforma, em mais línguas, em mais versões, e em mais países do que antes. Por favor, preencha o formulário abaixo para realizar sua doação. Nós coletaremos informações de pagamento na próxima tela. São aceitos Visa ou Mastercard. "
+    header copy: "Juntos podemos nos tornar a geração mais comprometida na história. Seu apoio significa abertura da Palavra de Deus em mais plataforma, em mais línguas, em mais versões, e em mais países do que antes. Por favor, preencha o formulário abaixo para realizar sua doação. Nós coletaremos informações de pagamento na próxima tela. "
     header confirm copy: "Juntos podemos nos tornar a geração mais comprometida na história. Seu apoio significa abertura da Palavra de Deus em mais plataforma, em mais línguas, em mais versões, e em mais países do que antes. Clique em Doar Agora para realizar sua doação."
     donate now button: "Doar Agora"
     email header: "YouVersion, um ministério da LifeChurch.tv, recebeu sua doação. Bens ou serviços não foram providos em troca, exceto os inatingíveis benefícios religiosos. Por favor, em dúvidas entre em contato com giving@lifechurch.tv ."
@@ -629,20 +631,23 @@ pt-BR:
       our action: "Fomos notificados sobre isto e solucionaremos o mais breve possível."
   shared:
     menu_settings:
-      title: "Suas configurações"
+      title: "Configurações do Leitor "
       close: "Fechar"
       font: "Fonte:"
       font1: "Helvetica"
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "Tamanho:"
+      font size: "Tamanho da Fonte:"
       small: "Pequeno"
       medium: "Médio"
       large: "Grande"
-      highlights: "Destaques:"
+      highlights: "Destaques"
       'on': "Ativado"
       'off': "Desativado"
+      extras: "Extras: "
+      translation notes: "Notas de Rodapé "
+      cross references: "Cruzar Referências "
   app errors:
     404 explanation: "Você pode tentar reiniciar na <a href='%{reader_path}'>página inicial</a>. Ainda tendo problemas? Contate nossa  <a href='%{support_url}'>equipe de suporte</a>."
     404 message: "Desculpe, a página que você está procurando não pôde ser encontrada. "
@@ -650,6 +655,8 @@ pt-BR:
     408 explanation: "Nós fomos alertados e tentaremos resolver quaisquer problemas persistentes o quanto antes. Vamos ver se conseguimos  te levar de volta para sua leitura da Bíblia! "
     try again: "Tente Novamente"
   versions:
+    filter: "Filtrar Versões..."
+    courtesy of: "%{abbreviation} disponibilizado a você por %{publisher}"
     learn more: "Saiba Mais"
     index title: "Versões Disponíveis "
     publisher widget title: "Editora\n"
@@ -658,5 +665,5 @@ pt-BR:
     other versions: "Outras Versões Deste Editor"
     number of versions field: "Total de Versões: "
     number of languages field: "Total de Idiomas: "
-    language and count: "%{idioma_nome} (%{idioma_contar})"
+    language and count: "%{language_name} (%{language_count})"
     public domain: "Domínio Público"
