--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -538,7 +538,7 @@ ru:
     card exp date: "Срок действия (ММГГ)"
     receipt: "Выслать на email копию чека."
     preview: "Просмотр пожертвования"
-    header copy: "Вместе мы могли бы стать самым читающим Библию поколением в истории. Ваша поддержка означает, что больше людей смогут открыть Слово Божие на большем количестве платформ, на других языках, во множестве переводов и в большем количестве стран, чем когда-либо прежде. Пожалуйста, заполните форму ниже, чтобы сделать пожертвование. На следующей странице Вам также необходимо будет ввести платёжную информацию. Мы принимаем карты Visa и Mastercard."
+    header copy: "Вместе мы могли бы стать самым читающим Библию поколением в истории. Ваша поддержка означает, что больше людей смогут открыть Слово Божие на большем количестве платформ, на других языках, во множестве переводов и в большем количестве стран, чем когда-либо прежде. Пожалуйста, заполните форму ниже, чтобы сделать пожертвование. На следующей странице Вам также необходимо будет ввести платёжную информацию."
     header confirm copy: "Вместе мы могли бы стать самым читающим Библию поколением в истории. Ваша поддержка означает, что больше людей смогут открыть Слово Божие на большем количестве платформ, на других языках, во множестве переводов и в большем количестве стран, чем когда-либо прежде. Нажмите на зелёную кнопку справа, чтобы сделать пожертвование."
     donate now button: "Отправить пожертвование"
     email header: "YouVersion, миссионерское отделение LifeChurch.tv, получило Ваше пожертвование. За пожертвование Вам не были предоставлены никакие товары и услуги, за исключением нематериальных религиозных преимуществ. Пожалуйста, свяжитесь с giving@lifechurch.tv, если у Вас есть какие-либо вопросы."
@@ -630,7 +630,7 @@ ru:
       our action: "Мы получили уведомление об этой ошибке и займёмся её решением как можно скорее."
   shared:
     menu_settings:
-      title: "Ваши настройки"
+      title: "Настройки окна чтения"
       close: "Закрыть"
       font: "Шрифт:"
       font1: "Helvetica"
@@ -644,6 +644,9 @@ ru:
       highlights: "Выделение цветом:"
       'on': "Вкл"
       'off': "Выкл"
+      extras: "Дополнительно:"
+      translation notes: "Сноски"
+      cross references: "Перекрёстные ссылки"
   app errors:
     404 explanation: "Попробуйте начать снова с <a href='%{reader_path}'>главной страницы</a>. Всё ещё появляется ошибка? Напишите в нашу <a href='%{support_url}'>службу поддержки</a>."
     404 message: "Извините, запрашиваемая страница не существует."
@@ -656,7 +659,6 @@ ru:
     index title: "Доступные переводы"
     publisher widget title: "Издатель"
     visit publisher: "Посетить сайт издателя"
-    about: "Узнать больше об этом переводе..."
     read title: "Читать этот перевод"
     other versions: "Другие переводы, предоставленные издателем"
     number of versions field: "Всего переводов:"
