--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -94,6 +94,7 @@ sk:
   search placeholder: "Hľadať..."
   search: "Hľadať"
   book: "Kniha"
+  filter book: "Filtrovať knihy..."
   try the beta: "Vyskúšajte beta verziu"
   welcome to the beta: "Vitajte na novej stránke YouVersion.com!"
   selected: "Označené"
@@ -538,7 +539,7 @@ sk:
     card exp date: "Dátum expirácie (MMRR)"
     receipt: "Zaslať kópiu potvrdenia emailom."
     preview: "Zobraziť náhľad príspevku"
-    header copy: "Spoločne sa môžme stať generáciou najviac zapálenou pre Bibliu v dejinách. Vaša podpora znamená, že ľudia si môžu otvoriť Božie Slovo na viac platformách, vo viac jazykoch, vo viac prekladoch a vo viac krajinách, ako kedykoľvek predtým. Na poslanie príspevku prosím vyplňte nižšie uvedený formulár. Platobné údaje následne zadáte na ďalšej strane. Akceptujeme karty Visa alebo MasterCard."
+    header copy: "Spoločne sa môžme stať generáciou najviac zapálenou pre Bibliu v dejinách. Vaša podpora znamená, že ľudia si môžu otvoriť Božie Slovo na viac platformách, vo viac jazykoch, vo viac prekladoch a vo viac krajinách, ako kedykoľvek predtým. Na poslanie príspevku prosím vyplňte nižšie uvedený formulár. Platobné údaje následne zadáte na ďalšej strane."
     header confirm copy: "Spoločne sa môžme stať generáciou najviac zapálenou pre Bibliu v dejinách. Vaša podpora znamená, že ľudia si môžu otvoriť Božie Slovo na viac platformách, vo viac jazykoch, vo viac prekladoch a vo viac krajinách, ako kedykoľvek predtým. Kliknutím na Prispieť teraz pošlete váš príspevok."
     donate now button: "Prispejte teraz"
     email header: "YouVersion, patriace pod LifeChurch.tv, obdržalo váš príspevok. Nebol zaňho poskytnutý žiadny tovar, okrem nehmotných duchovných dobier. Ak máte akékoľvek otázky, kontaktujte prosím giving@lifechurch.tv."
@@ -630,20 +631,21 @@ sk:
       our action: "Na chybu sme boli upozornení a pozrieme sa na ňu hneď, ako to bude možné."
   shared:
     menu_settings:
-      title: "Vaše nastavenia"
+      title: "Nastavenia zobrazenia"
       close: "Zatvoriť"
       font: "Písmo:"
       font1: "Helvetica"
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "Veľkosť:"
+      font size: "Veľkosť písma:"
       small: "Malé"
       medium: "Stredné"
       large: "Veľké"
       highlights: "Zvýraznenia"
       'on': "Zapnuté"
       'off': "Vypnuté"
+      translation notes: "Poznámky"
   app errors:
     404 explanation: "Skúste začať odznova na <a href='%{reader_path}'>úvodnej stránke</a>. Ak problém stále pretrváva, kontaktujte náš <a href='%{support_url}'>tím podpory</a>."
     404 message: "Prepáčte, ale stránku, ktorú hľadáte, sa nepodarilo nájsť."
@@ -651,12 +653,12 @@ sk:
     408 explanation: "Na situáciu sme boli upozornení a pretrvávajúce problémy odstránime čo najskôr. Pozrime sa, či sa dá vrátiť na vaše čítanie Biblie!"
     try again: "Skúste znova"
   versions:
+    filter: "Filtrovať preklady..."
     courtesy of: "%{abbreviation} Vám prináša %{publisher}"
     learn more: "Zistiť viac"
     index title: "Dostupné preklady"
     publisher widget title: "Vydavateľ"
     visit publisher: "Navštívte webstránku vydavateľa"
-    about: "Viac informácií o tomto preklade..."
     read title: "Čítať tento preklad"
     other versions: "Ďalšie preklady od tohto vydavateľa"
     number of versions field: "Počet prekladov:"
