--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -511,7 +511,7 @@ hi:
   audio:
     none: "क्षमा कीजिए,ऑडियो उपलब्ध नहीं हैं|"
     chapter only: "इन वचनों के लिए ऑडियो उपलब्ध नहीं हैं| कृपया इस के लिए क्षमा कीजिए| ऑडियो के लिए अध्याय को रीडर में देखे|"
-    close player menu: "close"
+    close player menu: "क्लोज "
   highlights:
     creation error: "कृपया क्षमा कीजिए,हाइलाइट करने में असमर्थ|"
     delete error: "कृपया क्षमा कीजिए,हाइलाइट हटाने में असमर्थ हैं|"
@@ -630,20 +630,23 @@ hi:
       our action: "हमे इसके बारे में सूचित किया गया हैं| जितनी जल्दी हो सके इसको सुधारने में जुट जायेंगे|"
   shared:
     menu_settings:
-      title: "आपका सेटिंग्स"
-      close: "Close"
-      font: "Font:"
+      title: "रीडर सेटिंग्स"
+      close: "क्लोज "
+      font: "फोंट:"
       font1: "Helvetica"
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "साइज़:"
+      font size: "फोंट  साइज़:"
       small: "छोटा "
       medium: "मध्यम"
       large: "बड़ा "
-      highlights: "हाइलाइट:"
-      'on': "On"
-      'off': "Off"
+      highlights: "हाइलाइट"
+      'on': "ऑन "
+      'off': "ऑफ "
+      extras: "अतिरिक्त:"
+      translation notes: "फुटनोट्स "
+      cross references: "प्रति संदर्भ"
   app errors:
     404 explanation: "शुरुआत करने का पुन:कोशिश करे <a href='%{reader_path}'>home page</a>. अभी परेशानी हो रही ? संपर्क करिए <a href='%{support_url}'>support team</a>."
     404 message: "कृपया क्षमा कीजिए,आपके द्वारा अन्वेषित पेज नहीं मिल सका |"
@@ -656,7 +659,6 @@ hi:
     index title: "उपलब्ध संस्करण "
     publisher widget title: "प्रकाशक "
     visit publisher: "प्रकाशक के वेबसाइट पर जाये "
-    about: "इस संस्करण के बारे में और अधिक जानकारीयाँ........."
     read title: "इस संस्करण को पढ़िए "
     other versions: "इस प्रकाशक के अन्य संस्करण "
     number of versions field: "कुल संस्करण:"
