--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -538,7 +538,7 @@ sv:
     card exp date: "Utgångsdatum (MMÅÅ)"
     receipt: "E-posta mig en kopia av kvittot."
     preview: "Förhandsgranska donation"
-    header copy: "Tillsammans kan vi bli den generation genom tiderna som är mest engagerad i Bibeln. Ert stöd innebär att människor kan öppna Guds Ord på fler plattformar, på fler språk, med fler översättningar, och i fler länder än någonsin tidigare. Fyll i formuläret nedan för att göra din donation.  Du anger betalningsinformation på nästa sida. Vi accepterar Visa och Mastercard."
+    header copy: "Tillsammans kan vi bli den generation genom tiderna som är mest engagerad i Bibeln. Ert stöd innebär att människor kan öppna Guds Ord på fler plattformar, på fler språk, med fler översättningar, och i fler länder än någonsin tidigare. Fyll i formuläret nedan för att göra din donation.  Du anger betalningsinformation på nästa sida."
     header confirm copy: "Tillsammans kan vi bli den generation genom tiderna som är mest engagerade i Bibeln. Ert stöd innebär att människor kan öppna Guds Ord på fler plattformar, på fler språk, med fler översättningar, och i fler länder än någonsin tidigare. Klicka på Donera nu för att göra en donation."
     donate now button: "Donera nu"
     email header: "YouVersion, en del av LifeChurch.tv har mottagit din donation. Inga varor eller tjänster lämnades i utbyte för donation förutom immateriella religiösa förmåner. Vänligen kontakta giving@lifechurch.tv med frågor."
@@ -630,20 +630,23 @@ sv:
       our action: "Vi har meddelats om detta och kommer att ta tag i det så snart som möjligt."
   shared:
     menu_settings:
-      title: "Dina inställningar"
+      title: "Läsinställningar"
       close: "Stäng"
       font: "Typsnitt:"
       font1: "Helvetica"
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "Storlek:"
+      font size: "Teckenstorlek:"
       small: "Liten"
       medium: "Medel"
       large: "Stor"
-      highlights: "Markeringar:"
+      highlights: "Markeringar"
       'on': "På"
       'off': "Av"
+      extras: "Extra:"
+      translation notes: "Fotnoter"
+      cross references: "Korsreferenser"
   app errors:
     404 explanation: "Du kan pröva att gå tillbaka till <a href='%{reader_path}'>startsidan</a>.\nOm du fortfarande har problem kan du kontakta vår <a href='%{support_url}'>supportgrupp</a>."
     404 message: "Tyvärr, men sidan du letar efter kan inte hittas."
@@ -656,7 +659,6 @@ sv:
     index title: "Tillgängliga översättningar"
     publisher widget title: "Utgivare"
     visit publisher: "Besök utgivarens hemsida"
-    about: "Läs mer om denna översättning..."
     read title: "Läs den här översättningen"
     other versions: "Andra översättningar från denna utgivare"
     number of versions field: "Totalt antal översättningar:"
